<resources>
    <string name="app_name">getirHackathon</string>
    <string name="google_api_key">AIzaSyDFzhFWiS8E7_ffbM564B-GHKoB25ETsm0</string>

    <string name="settings_icon">&#xf013;</string>
    <string name="location_icon">&#xf124;</string>
    <string name="list_icon">&#xf0ca;</string>
    <string name="language_icon">&#xf0ac;</string>
    <string name="user_icon">&#xf007;</string>
    <string name="cart_down">&#xf218;</string>
    <string name="logout_icon">&#xf08b;</string>
    <string name="back_icon">&#xf060;</string>
    <string name="info_icon">&#xf129;</string>
    <string name="phone_icon">&#xf095;</string>
    <string name="address_icon">&#xf015;</string>
    <string name="scan_icon">&#xf002;</string>
    <string name="tick_icon">&#xf00c;</string>

    <string name="cancel">İptal</string>
    <string name="open_location_settings">Konum Servisi Ayarları</string>
    <string name="location_service_not_enabled">Konum Servisleri devre dışı!</string>
    <string name="profile">Profil</string>
    <string name="previous_orders">Önceki Siparişlerim</string>
    <string name="logout">Çıkış Yap</string>
    <string name="all">Tümü</string>
    <string name="choose">Seç</string>
    <string name="save">Kaydet</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="login">Giriş Yap</string>
    <string name="my_addresses">Adreslerim</string>
    <string name="send_your_address">Adresini gönder</string>
    <string name="send_your_address_desc">En yakınındaki servislere ulaşabilmek için adresini belirt!</string>
    <string name="send_current_location">Konumunu gönder</string>
    <string name="send_saved_address">Kayıtlı adres seç</string>
    <string name="address_name">Adres ismi</string>
    <string name="address">Adres</string>
    <string name="town">İlçe</string>
    <string name="country">İl</string>
    <string name="minute">dk</string>
    <string name="meters">mt</string>
    <string name="languages">Diller</string>
    <string name="scan_for_couriers">Yakındaki Hizmetleri Ara</string>
    <string name="finish_task">İş Bitti</string>

</resources>
