<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#000000">

    <ImageButton
        android:layout_width="150dip"
        android:layout_height="150dip"
        android:id="@+id/logo"
        android:background="@drawable/logo300"
        android:layout_marginTop="-100dip"
        />

    <EditText
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/username_text"
        android:maxLines="1"
        android:hint="@string/username"/>
    <EditText
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/password_text"
        android:maxLines="1"
        android:hint="@string/password"/>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/button_login"
        android:layout_width="150dip"
        android:layout_height="65dip"
        fancy:fb_text="@string/login"
        fancy:fb_borderColor="@color/blue_light"
        fancy:fb_borderWidth="2dp"
        fancy:fb_ghost="true"
        fancy:fb_radius="2dp"
        fancy:fb_textColor="@color/blue_light"
        fancy:fb_textSize="21sp"
        android:layout_marginTop="30dp"/>

</LinearLayout>