<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#620b38"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">

        <TextView
            android:id="@+id/left_drawer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/list_icon"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/settings_icon"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="location"
            android:textColor="#000000"
            android:textSize="28sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dip"
            android:gravity="center"
            android:orientation="horizontal">

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/buttonActivate"
                android:layout_width="150dip"
                android:layout_height="65dip"
                fancy:fb_borderColor="#FF0080"
                fancy:fb_borderWidth="2dp"
                fancy:fb_ghost="true"
                fancy:fb_radius="2dp"
                fancy:fb_text="Available"
                fancy:fb_textColor="#FF0080"
                fancy:fb_textSize="21sp" />

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/buttonQr"
                android:layout_width="150dip"
                android:layout_height="65dip"
                android:layout_marginLeft="10dp"
                fancy:fb_borderColor="#ff8400"
                fancy:fb_borderWidth="2dp"
                fancy:fb_fontIconResource="@string/location_icon"
                fancy:fb_fontIconSize="20sp"
                fancy:fb_ghost="true"
                fancy:fb_iconPosition="left"
                fancy:fb_radius="2dp"
                fancy:fb_text="Location"
                fancy:fb_textColor="#ff8400"
                fancy:fb_textSize="21sp" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/right_drawer"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:background="@color/blue_light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            <TextView
                android:id="@+id/languages_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/languages"
                android:layout_marginLeft="20dp"
                android:textSize="24sp"/>

                <ExpandableListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </ExpandableListView>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/left_drawer"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="@color/blue_light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Left" />
    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>
